# baobab-auth-database

./: .env.example  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: conf.py
docs/ai_workflow/state/: lock.yaml  queue.yaml
docs/architecture/adr/: ADR-001-architecture-persistance-v0-1-0.md  ADR-002-catalogue-rbac-versionne-v0-2-0.md
docs/backlog/backlogs/: BL-001.md  BL-002.md  BL-003.md  BL-004.md  BL-005.md  BL-006.md  BL-007.md  BL-008.md  BL-009.md  BL-010.md  BL-011.md  BL-012.md  BL-013.md
docs/contracts/: exceptions.md  imports.md  public_api.md  services.md
docs/guides/: index.rst
docs/guides/how-to/: catalog-diagnostics.rst  cli-migrations.rst  integration-validation.rst
docs/integrations/: compatibility_matrix.yaml
docs/integrations/reports/: baobab-auth-core-v0.5.1__baobab-auth-database-v0.1.0.md  baobab-auth-core-v0.5.1__baobab-auth-database-v0.1.1.md  baobab-auth-core-v0.5.1__baobab-auth-database-v0.2.0.md
docs/specifications/cahier-des-charges/: 00_roadmap_global.md  01_cdc_v0_1_0_stabilisation_mvp.md  02_cdc_v0_2_0_catalogue_rbac_versionne.md  03_cdc_v0_3_0_sessions_jwk_revocation.md  04_cdc_v0_4_0_integration_api.md  05_cdc_v0_5_0_service_docker_postgresql.md  06_cdc_v0_6_0_admin_diagnostics.md  07_cdc_v0_7_0_audit_pagination_observabilite.md  08_cdc_v0_8_0_lifecycle_anonymisation.md  09_cdc_v0_9_0_release_candidate.md  10_cdc_v1_0_0_stable_finale.md  manifest.json
docs/specifications/us/: index.rst
src/baobab_auth_database/: __init__.py
src/baobab_auth_database/bootstrap/: __init__.py  auth_catalog_bootstrap.py
src/baobab_auth_database/catalog/: __init__.py  auth_catalog_checksum.py  auth_catalog_compat_profile.py  auth_catalog_diagnostic_report.py  auth_catalog_diagnostics.py  auth_catalog_report_formatter.py  auth_catalog_seed_result.py  auth_catalog_version_record.py
src/baobab_auth_database/cli/: __init__.py  auth_database_cli.py
src/baobab_auth_database/factories/: __init__.py  sqlalchemy_engine_factory.py  sqlalchemy_session_factory.py
src/baobab_auth_database/mappers/: __init__.py  auth_audit_event_orm_mapper.py  auth_jwk_key_orm_mapper.py  auth_jwk_key_snapshot.py  auth_orm_value_converter.py  auth_permission_orm_mapper.py  auth_role_orm_mapper.py  auth_session_orm_mapper.py  auth_user_orm_mapper.py  auth_user_profile_orm_mapper.py
src/baobab_auth_database/migrations/: __init__.py  alembic_config_factory.py  auth_database_migrator.py  env.py  migration_orm_consistency_checker.py  script.py.mako
src/baobab_auth_database/models/: __init__.py
src/baobab_auth_database/naming/: __init__.py  auth_table_naming_convention.py
src/baobab_auth_database/repositories/: __init__.py  sqlalchemy_audit_repository.py  sqlalchemy_catalog_version_repository.py  sqlalchemy_jwk_key_repository.py  sqlalchemy_permission_repository.py  sqlalchemy_persistence_guard.py  sqlalchemy_role_repository.py  sqlalchemy_session_repository.py  (+2 more)
tests/: conftest.py
tests/contracts/: test_core_ports_contract.py  test_migration_orm_consistency.py  test_public_api_contract.py
tests/integration/: test_auth_catalog_bootstrap_integration.py  test_catalog_cli_integration.py
(+157 files in other folders)
